cargo-features = ["edition"]
[package]
name = "pubsub"
version = "0.1.0"
authors = ["Joshua Job <josh@joshjob.com>"]
edition = '2018'

[dependencies]
actix-web = "0.6"
actix = "0.5.8"
log = "0.4"
env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
clap = "2.32"
byteorder = "1"
hyper = "0.12"
tokio = "0.1"
bytes = "0.4.8"
http = "0.1.7"
rmp-serde = "0.13"
