[package]
name = "Examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
post = { version = "0.1.0", path = "../lib" }
clap = "2.32"
futures = { version = "0.3"}
log = "0.4"
env_logger = "0.7"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core", "io-std"] }
tokio-util = { version = "0.3", features = ["udp","codec"] }
bytes = "0.5"

[[example]]
name = "stdin_publisher"
path = "stdin_publisher.rs"

[[example]]
name = "stdout_subscriber"
path = "stdout_subscriber.rs"
