[package]
name = "pubsub"
version = "0.1.0"
authors = ["Joshua Job <josh@joshjob.com>"]
edition = '2018'

[dependencies]
log = "0.4"
env_logger = "0.5"
futures = { version = "0.3", features = ["compat"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"
clap = "2.32"
byteorder = "1"
hyper = "0.12"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core","sync"] }
tokio-util = { version = "0.2", features = ["udp","codec"] }
tonic = "0.1.0-alpha"
prost = "0.6"
bytes = "0.5"
rmp-serde = "0.13"
itertools = "0.7.8"

[build-dependencies]
tonic-build = "0.1.0-alpha.6"
