[package]
name = "post"
version = "0.1.0"
authors = ["Joshua Job <josh@joshjob.com>"]
edition = '2018'

[dependencies]
log = "0.4"
env_logger = "0.7"
futures = { version = "0.3"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"
clap = "2.32"
byteorder = "1"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core","sync"] }
tokio-util = { version = "0.3", features = ["udp","codec"] }
tonic = "^0.3"
prost = "0.6"
bytes = "0.5"
rmp-serde = "0.13"
itertools = "0.8"
hyper = "^0.13.4"

[build-dependencies]
tonic-build = "^0.3"

[[bin]]
name = "post-meetup"
path = "src/bin/post_meetup.rs"

