[package]
name = "pubsub-meetup"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
pubsub = { version = "0.1.0", path = "../lib" }
clap = "2.33"
env_logger = "0.5"
futures = "0.3"
log = "0.4"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core"] }
serde = "1.0"
serde_json = "1.0"
tonic = "^0.3"

