[package]
name = "post-meetup"
version = "0.1.0-alpha.0"
authors = ["Joshua Job <josh@joshjob.com>"]
edition = '2018'
description = "Meetup service for the Post library."
license = "MIT"
license-file = "LICENSE.txt"


[dependencies]
bytes = "0.5"
post = { version = "0.1.0-alpha.0", path = "../lib" }
clap = "2.33"
env_logger = "0.7"
eyre = "0.6"
futures = "0.3"
log = "0.4"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core"] }
serde = "1.0"
serde_json = "1.0"
tonic = "^0.3"

