[package]
name = "tests"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
post = { version = "0.1.0", path = "../lib" }
clap = "2.32"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core", "rt-threaded", "io-std", "process"] }
tokio-util = { version = "0.3", features = ["udp","codec"] }
lazy_static = "1.4"
bytes = "0.5"
pin-project = "^0.4"
